# churn-prediction-mlops

./: Churn_Modelling_Hyperparameter_tuning_DeepLearning.ipynb  Churn_modeling.ipynb  Preprocess.py  Preprocessed_churn_dataset.csv  README.md  app.py  pyproject.toml  test.py
Saved_components/: OneHotEncoder.joblib  Scaler.joblib
dataset/: sample_data.csv
notebooks/: data_verification.ipynb
saved_components/: coltransformer.joblib  ohe.joblib
saved_model/: my_model.h5
saved_model/my_model/: saved_model.pb
saved_model/my_model/variables/: variables.data-00000-of-00001  variables.index
src/: data_validation.py
tests/src/data/: test_validation.py
