[tool.poetry]
name = "churn-prediction-mlops"
version = "0.1.0"
description = "Employee churn prediction ml system"
authors = ["tikendraw <tikendraksahu1029@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
cerberus = "^1.3.5"
pyyaml = "^6.0.2"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
