[tool.poetry]
name = "churn-prediction-mlops"
version = "0.1.0"
description = "Employee churn prediction ml system"
authors = ["tikendraw <tikendraksahu1029@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "tests" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.3"
cerberus = "^1.3.5"
pyyaml = "^6.0.2"
scikit-learn = "^1.5.2"
docker = "^7.1.0"
plotly = "^5.24.1"
mlflow = "^2.17.2"
streamlit = "^1.40.0"
fastapi = "^0.115.4"
zenml = "^0.68.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
